In the item view constructors, call setFocus() only after m_extensionsFactory is initialised. This fixes a possible crash in Konqueror when changing the settings or manipulating tabs.

BUG: 240374
FIXED-IN: 4.5.4

svn path=/branches/KDE/4.5/kdebase/apps/; revision=1199277